ingress-resource-2.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-resource-2
spec:
  rules:
  - host: vv.com
    http:
      paths:
      - backend:
          serviceName: nginx-deploy-main
          servicePort: 80
  - host: meet.vv.com
    http:
      paths:
      - backend:
          serviceName: nginx-deploy-meet
          servicePort: 80
  - host: chat.vv.com
    http:
      paths:
      - backend:
          serviceName: nginx-deploy-chat
          servicePort: 80
