ingress-resource-3.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: ingress-resource-3
spec:
  rules:
  - host: vv.com
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx-deploy-main
          servicePort: 80
      - path: /meet
        backend:
          serviceName: nginx-deploy-meet
          servicePort: 80
      - path: /chat
        backend:
          serviceName: nginx-deploy-chat
          servicePort: 80
